--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -6,4 +6,20 @@
   .text-default {
     @apply text-gray-500 text-sm;
   }
+
+  .btn-primary {
+    @apply bg-sky-500 text-white px-3 py-2 rounded-md hover:border hover:border-sky-600 active:bg-sky-700 focus:outline-none focus:ring focus:ring-sky-300;
+  }
+
+  .btn-default {
+    @apply bg-gray-300 text-white px-3 py-2 rounded-md hover:border hover:border-gray-600 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300;
+  }
+
+  .alur-card-active {
+    @apply text-center bg-sky-50 border rounded-lg border-sky-300 py-16 px-16;
+  }
+
+  .alur-card-default {
+    @apply text-center bg-white border rounded-lg border-gray-300 py-16 px-16;
+  }
 }
